# snam-gas-data-scraper

./: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/snam_scraper/: __init__.py  cli.py  config.py  exporter.py  fetcher.py  parser.py
tests/: test_fetcher.py
